# vize

./: .gitignore  Cargo.toml  README.md  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: FUNDING.yml
.github/workflows/: ci.yml  deploy-playground.yml  release.yml
bench/: run.ts
crates/vize/: Cargo.toml
crates/vize/src/: config.rs  main.rs
crates/vize/src/commands/: check.rs  lint.rs  musea.rs
crates/vize_allocator/: Cargo.toml
crates/vize_allocator/src/: allocator.rs  boxed.rs  clone_in.rs  lib.rs  vec.rs
crates/vize_armature/src/: parser.rs
crates/vize_atelier_core/src/: codegen.rs  transform.rs
crates/vize_atelier_core/src/codegen/: element.rs
crates/vize_atelier_core/src/transforms/: hoist_static.rs  transform_expression.rs
crates/vize_atelier_dom/src/: lib.rs
crates/vize_atelier_dom/tests/: dom_snapshot.rs
crates/vize_atelier_sfc/src/: types.rs
crates/vize_atelier_sfc/src/compile_script/: function_mode.rs  import_utils.rs  inline.rs  props.rs
crates/vize_atelier_sfc/src/script/: context.rs  import_usage_check.rs
crates/vize_bindings/: Cargo.toml  build.rs
crates/vize_bindings/src/: lib.rs  napi.rs  types.rs  wasm.rs
crates/vize_canon/: Cargo.toml
crates/vize_canon/src/: lib.rs  sfc_typecheck.rs  tests.rs  tsgo_bridge.rs  typecheck_service.rs  virtual_ts.rs
crates/vize_canon/src/sfc_typecheck/: virtual_ts.rs
crates/vize_canon/src/snapshots/: vize_canon__tests__virtual_ts_tests__virtual_ts_complex_component.snap  vize_canon__tests__virtual_ts_tests__virtual_ts_simple_component.snap  vize_canon__tests__virtual_ts_tests__virtual_ts_with_composables.snap  vize_canon__tests__virtual_ts_tests__virtual_ts_with_emits.snap  vize_canon__tests__virtual_ts_tests__virtual_ts_with_props.snap  vize_canon__tests__virtual_ts_tests__virtual_ts_with_slots.snap  vize_canon__tests__virtual_ts_tests__virtual_ts_with_v_for.snap
crates/vize_carton/src/: lib.rs  profiler.rs  source_range.rs
crates/vize_compiler_cli/: Cargo.toml
crates/vize_compiler_cli/src/: main.rs
crates/vize_compiler_core/: Cargo.toml
crates/vize_compiler_core/src/: ast.rs  errors.rs  lib.rs  options.rs  parser.rs  runtime_helpers.rs  test_macros.rs  tokenizer.rs  transform.rs
crates/vize_compiler_core/src/codegen/: children.rs  context.rs  element.rs  expression.rs  mod.rs  node.rs  slots.rs  v_for.rs  v_if.rs
crates/vize_compiler_core/src/transforms/: hoist_static.rs  transform_element.rs  transform_expression.rs  transform_text.rs  v_bind.rs  v_for.rs  v_if.rs  v_memo.rs  v_model.rs  v_on.rs  v_once.rs  v_slot.rs
crates/vize_compiler_dom/: Cargo.toml
crates/vize_compiler_dom/src/: lib.rs  options.rs
crates/vize_compiler_dom/src/transforms/: v_html.rs  v_model.rs  v_on.rs  v_show.rs  v_text.rs
crates/vize_compiler_sfc/: Cargo.toml
crates/vize_compiler_sfc/benches/: sfc_parse.rs
crates/vize_compiler_sfc/src/: compile.rs  compile_script.rs  compile_template.rs  css.rs  lib.rs  parse.rs  style.rs  types.rs
crates/vize_compiler_sfc/src/script/: analyze_script_bindings.rs  define_emits.rs  define_expose.rs  define_model.rs  define_options.rs  define_props.rs  define_slots.rs  import_usage_check.rs  utils.rs
crates/vize_compiler_vapor/: Cargo.toml
crates/vize_compiler_vapor/src/: generate.rs  ir.rs  lib.rs  transform.rs
crates/vize_compiler_vapor/src/generators/: block.rs  component.rs  directive.rs  event.rs  for_node.rs  generate_slot.rs  generate_text.rs  if_node.rs  prop.rs
crates/vize_compiler_vapor/src/transforms/: element.rs  transform_slot.rs  transform_text.rs  v_bind.rs  v_for.rs  v_if.rs  v_model.rs  v_on.rs  v_show.rs
crates/vize_croquis/: Cargo.toml
crates/vize_croquis/src/: analysis.rs  analyzer.rs  builtins.rs  display.rs  import_resolver.rs  lib.rs  scope.rs  script_parser.rs  types.rs  virtual_ts.rs
crates/vize_croquis/src/script_parser/: process.rs
crates/vize_formatter/: Cargo.toml
crates/vize_formatter/src/: lib.rs
crates/vize_linter/: Cargo.toml
crates/vize_linter/src/: lib.rs
crates/vize_maestro/: Cargo.toml
crates/vize_maestro/src/ide/: hover.rs  mod.rs  type_service.rs
crates/vize_patina/: Cargo.toml
crates/vize_patina/src/: context.rs  diagnostic.rs  lib.rs  linter.rs  rule.rs  visitor.rs
crates/vize_patina/src/output/: mod.rs
crates/vize_relief/src/: ast.rs  options.rs
crates/vize_shared/: Cargo.toml
crates/vize_shared/src/: dom_tag_config.rs  flags.rs  general.rs  lib.rs
crates/vize_typechecker/: Cargo.toml
crates/vize_typechecker/src/: lib.rs
crates/vize_vitrine/: Cargo.toml
crates/vize_vitrine/src/: lib.rs  napi.rs  napi_typecheck.rs  typecheck.rs  wasm.rs  wasm_typecheck.rs
crates/vue_compiler_cli/: Cargo.toml
crates/vue_compiler_cli/src/: main.rs
crates/vue_compiler_sfc/src/: compile.rs
npm/fresco/: package.json
npm/fresco-native/: package.json
npm/musea-mcp-server/: package.json
npm/musea-nuxt/: package.json
npm/nuxt/: package.json
npm/vite-plugin-musea/: package.json
npm/vite-plugin-musea/src/: a11y.ts  index.ts  vrt.ts
npm/vite-plugin-vize/: README.md  package.json  tsconfig.json
npm/vite-plugin-vize/example/: index.html  package.json  vite.config.ts
npm/vite-plugin-vize/src/: compiler.ts  index.ts  types.ts  utils.ts
npm/vize/: README.md  package.json
npm/vize-native/: index.d.ts  index.js  package.json
npm/vize-wasm/: .gitignore  index.d.ts  index.js  package.json
npm/vize/scripts/: postinstall.js
npm/vize/src/: config.ts  index.ts  types.ts
npm/vizejs/: package.json
npm/vscode-art/: README.md  package.json
npm/vscode-vize/: README.md  package.json
playground/: README.md  index.html  package.json  vite.config.ts
playground/src/: App.vue  styles.css
playground/src/components/: CodeHighlight.vue  CroquisPlayground.vue  MonacoEditor.vue  MuseaPlayground.vue  PatinaPlayground.vue  TypeCheckPlayground.vue
playground/src/wasm/: index.ts
scripts/: release.sh
tests/fixtures/sfc/: script-setup.toml
tests/vize_test_runner/: Cargo.toml
tests/vize_test_runner/src/: coverage.rs  lib.rs
(+101 files in other folders)
