[workspace]
resolver = "2"
members = [
    "crates/vize_allocator",
    "crates/vize_shared",
    "crates/vize_compiler_core",
    "crates/vize_compiler_dom",
    "crates/vize_compiler_vapor",
    "crates/vize_compiler_sfc",
    "crates/vize_bindings",
    "crates/vize_compiler_cli",
    "crates/vize_typechecker",
    "crates/vize_linter",
    "crates/vize_formatter",
    "tests/vize_test_runner",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/ubugeeei/vize"

[workspace.dependencies]
# Internal crates
vize_allocator = { path = "crates/vize_allocator" }
vize_shared = { path = "crates/vize_shared" }
vize_compiler_core = { path = "crates/vize_compiler_core" }
vize_compiler_dom = { path = "crates/vize_compiler_dom" }
vize_compiler_vapor = { path = "crates/vize_compiler_vapor" }
vize_compiler_sfc = { path = "crates/vize_compiler_sfc", default-features = false }
vize_bindings = { path = "crates/vize_bindings" }

# OXC dependencies
oxc_parser = "0.45"
oxc_ast = "0.45"
oxc_span = "0.45"
oxc_allocator = "0.45"
oxc_syntax = "0.45"
oxc_diagnostics = "0.45"
oxc_semantic = "0.45"
oxc_transformer = "0.45"
oxc_codegen = "0.45"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# NAPI
napi = { version = "2.14", default-features = false, features = ["napi8", "serde-json"] }
napi-derive = "2.14"

# WASM
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"

# Arena allocator
bumpalo = { version = "3.16", features = ["collections", "boxed"] }

# Utilities
thiserror = "2.0"
rustc-hash = "2.1"
bitflags = { version = "2.6", features = ["serde"] }
once_cell = "1.20"
compact_str = { version = "0.8", features = ["serde"] }
phf = { version = "0.11", features = ["macros"] }
memoffset = "0.9"
memchr = "2.7"
regex = "1.10"

# CSS
lightningcss = "1.0.0-alpha.68"

# Testing
insta = { version = "1.41", features = ["toml"] }

# Benchmarking
criterion = "0.5"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
