[package]
name = "vize_bindings"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["napi"]
napi = ["dep:napi", "dep:napi-derive", "dep:glob", "dep:rayon", "vize_compiler_sfc/native"]
wasm = ["dep:wasm-bindgen", "dep:serde-wasm-bindgen", "dep:js-sys"]

[dependencies]
vize_allocator = { workspace = true }
vize_shared = { workspace = true }
vize_compiler_core = { workspace = true }
vize_compiler_dom = { workspace = true }
vize_compiler_vapor = { workspace = true }
vize_compiler_sfc = { workspace = true, default-features = false }

serde = { workspace = true }
serde_json = { workspace = true }

# NAPI (optional)
napi = { workspace = true, optional = true }
napi-derive = { workspace = true, optional = true }

# Glob pattern (for batch compile)
glob = { version = "0.3", optional = true }

# Multithreading (for batch compile)
rayon = { version = "1.10", optional = true }

# WASM (optional)
wasm-bindgen = { workspace = true, optional = true }
serde-wasm-bindgen = { workspace = true, optional = true }
js-sys = { workspace = true, optional = true }

# For WASM compatibility with getrandom
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

[target.'cfg(not(target_arch = "wasm32"))'.build-dependencies]
napi-build = "2.0"
