[package]
name = "vize_compiler_cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "vize"
path = "src/main.rs"

[dependencies]
vize_compiler_sfc = { workspace = true, features = ["native"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Directory walking with .gitignore support
ignore = "0.4"

# Multithreading
rayon = "1.10"

# Serialization (for JSON output)
serde = { workspace = true }
serde_json = { workspace = true }

# TypeScript/JSX transpilation
oxc_allocator = { workspace = true }
oxc_parser = { workspace = true }
oxc_codegen = { workspace = true }
oxc_semantic = { workspace = true }
oxc_span = { workspace = true }
oxc_transformer = { workspace = true }

# Regex for script language detection
regex-lite = "0.1"
