[package]
name = "vize_compiler_core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
vize_shared = { workspace = true }
vize_allocator = { workspace = true }

memoffset = { workspace = true }
bumpalo = { workspace = true }
compact_str = { workspace = true }

# OXC
oxc_parser = { workspace = true }
oxc_ast = { workspace = true }
oxc_span = { workspace = true }
oxc_allocator = { workspace = true }
oxc_syntax = { workspace = true }
oxc_diagnostics = { workspace = true }
oxc_codegen = { workspace = true }
oxc_semantic = { workspace = true }
oxc_transformer = { workspace = true }

# Utilities
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
rustc-hash = { workspace = true }
once_cell = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
